--- a/resources/sass/layouts/_header.scss
+++ b/resources/sass/layouts/_header.scss
@@ -69,9 +69,9 @@
             box-shadow: none; 
             
             &:hover {
-                background-color: $color-primary; // Merah solid saat hover
-                color: $color-white; // Teks putih
-                box-shadow: 0 5px 15px rgba($color-primary, 0.4); // Memberi bayangan saat hover
+                background-color: $color-primary;
+                color: $color-white;
+                box-shadow: 0 5px 15px rgba($color-primary, 0.4); 
             }
         }
         
